--- a/terraform12/vmware/vmware_ign_config/scripts/install-config.yaml.tmpl
+++ b/terraform12/vmware/vmware_ign_config/scripts/install-config.yaml.tmpl
@@ -26,3 +26,10 @@ platform:
     defaultDatastore: '@vmwaredatastore@'
 pullsecret: '@pullsecret@'
 sshKey: '@sshkey@'
+imageContentSources: 
+- mirrors:
+  - '@mirroredregistry@'/release
+  source: quay.io/openshift-release-dev/ocp-release
+- mirrors:
+  - '@mirroredregistry@'/release
+  source: registry.svc.ci.openshift.org/ocp/release
